added sticky nav bar, with mobile first layout

--- a/html/index.html
+++ b/html/index.html
@@ -22,10 +22,48 @@
 <body>
     <div class="page_background_image">
 
-        <!-- <p class="text-center">hello</p> -->
+        <!--- Navigation Bar  ------------------------>
+        <header>
+            <!-- <div class="container"> -->
+            <nav class="navbar navbar-expand-lg navbar-dark nav-bg fixed-top">
+                <a class="navbar-brand nav-font" href="#">Home</a>
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="#">Experience <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#">Projects</a>
+                        <a class="nav-item nav-link" href="#">Skills</a>
+                        <a class="nav-item nav-link" href="#">Contact</a>
+                    </div>
+
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-item nav-link " href="#">Bio <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#">Blog</a>
+                        <a class="nav-item nav-link" href="#">Resume</a>
+                    </div>
+                </div>
+            </nav>
+            <!-- </div> -->
+        </header>
+
+        <!-- Main Content ---------------------------->
+        <main>
+
+        </main>
+
+        <!-- Page Footer ----------------------------->
+        <footer>
+
+        </footer>
 
 
 
+        <!-- scripts --------------------------------->
 
 
         <!-- Optional JavaScript -->
