--- a/html/index.html
+++ b/html/index.html
@@ -20,12 +20,11 @@
 </head>
 
 <body>
-    <div class="page_background_image">
+    <div class="page_background_image pt-5">
 
         <!--- Navigation Bar  ------------------------>
         <header>
-            <!-- <div class="container"> -->
-            <nav class="navbar navbar-expand-lg navbar-dark nav-bg fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark nav-bg fixed-top">
                 <a class="navbar-brand nav-font" href="#">Home</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -34,6 +33,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <!-- left nav items -->
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#">Experience <span class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#">Projects</a>
@@ -41,6 +41,7 @@
                         <a class="nav-item nav-link" href="#">Contact</a>
                     </div>
 
+                    <!-- right nav items -->
                     <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link " href="#">Bio <span class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#">Blog</a>
@@ -48,11 +49,66 @@
                     </div>
                 </div>
             </nav>
-            <!-- </div> -->
         </header>
 
         <!-- Main Content ---------------------------->
         <main>
+
+            <!-- About section -------->
+            <div class="container text-center">
+                <span>
+                    <h1 class="section-headings"><strong>ABOUT</strong></h1>
+                </span>
+            </div>
+
+            <div class="container">
+                <div class="row text-center pt-4 pt-5">
+
+                    <!-- profile img -->
+                    <div class="col-md-5">
+                        <img src="C:\Users\colle\Desktop\intern memories\intern memories\me.jpg"
+                            class="img-fluid profile-img p-0" alt="photo of Alex Nunez">
+                    </div>
+
+                    <!-- intro paragraph -->
+                    <div class="col-md-7" id="introduction">
+                        
+                        <p>My name is <strong>Jose A Nunez</strong>, but I go by the name of
+                            <strong>“Alex”</strong>.
+                            I’m a <strong>Computer Science</strong> student
+                            at the <strong>University of Central Florida</strong>, Soon to graduate in
+                            <strong>December
+                                2019</strong>.
+                        </p>
+
+                        <p>
+                            For as long as I can remember, I have always had a <strong>deep</strong> fascination for
+                            both <strong>Technology</strong> & <strong>Business</strong>.
+                            Eventually during my early teens, i was inspired by entrepreneurs such as <strong>Bill
+                                Gates</strong> & <strong>Larry Page</strong>, to
+                            persue a career in Computer Science, and eventually join their ranks by becoming an
+                            entrepreneur as well.
+                        </p>
+
+                        <p>
+                            Please read my <strong>Bio</strong> if you would like to learn more about me. I will
+                            finish
+                            this introduction
+                            with a quote that I hold dear, and try to live by
+                        </p>
+
+                        <blockquote class="blockquote text-right">
+                            <p class="mb-0">Vision Without Execution, Is Hallucination</p>
+                            <footer class="blockquote-footer" id="quote-contributor">Thomas Edison</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
 
         </main>
 
@@ -78,6 +134,5 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     </div>
-</body>
-
+    </body>
 </html>
