removed intro pic paddings

--- a/html/index.html
+++ b/html/index.html
@@ -55,17 +55,17 @@
         <main>
 
             <!-- About section -------->
-            <div class="container text-center">
+            <div class="container text-center pt-2">
                 <span>
                     <h1 class="section-headings"><strong>ABOUT</strong></h1>
                 </span>
             </div>
 
             <div class="container">
-                <div class="row text-center pt-4 pt-5">
+                <div class="row text-center pt-4 pb-5">
 
                     <!-- profile img -->
-                    <div class="col-md-5">
+                    <div class="col-md-5 p-0">
                         <img src="C:\Users\colle\Desktop\intern memories\intern memories\me.jpg"
                             class="img-fluid profile-img p-0" alt="photo of Alex Nunez">
                     </div>
