added exp-section, still not perfect for mobile first

--- a/html/index.html
+++ b/html/index.html
@@ -56,9 +56,9 @@
 
             <!-- About section -------->
             <div class="container text-center pt-2">
-                <span>
-                    <h1 class="section-headings"><strong>ABOUT</strong></h1>
-                </span>
+                <!-- <span> -->
+                <h1 class="section-headings"><strong>ABOUT</strong></h1>
+                <!-- </span> -->
             </div>
 
             <div class="container">
@@ -72,7 +72,7 @@
 
                     <!-- intro paragraph -->
                     <div class="col-md-7" id="introduction">
-                        
+
                         <p>My name is <strong>Jose A Nunez</strong>, but I go by the name of
                             <strong>“Alex”</strong>.
                             I’m a <strong>Computer Science</strong> student
@@ -106,9 +106,135 @@
             </div>
 
 
+            <!-- Experience section -------->
+            <div class="container text-center pt-5">
+                <h1 class="section-headings mb-0"><strong>EXPERIENCE</strong></h1>
+            </div>
+
+            <!-- FIS card -->
+            <div class="container card mt-4 mb-5">
+                <div class="text-center pt-3">
+                    <!-- Title Row -->
+                    <div class="row">
+                        <div class="col-md-3 col-lg-2">
+                            <a href="https://fisglobal.com" target="_blank">
+                                <img class="img-fluid pl-3" src="../images/experience/FIS_Logo.svg"
+                                    alt="Card image cap">
+                            </a>
+                        </div>
+
+                        <div class="col-md-3 col-lg-6">
+                            <div class="company-name-format">
+                                <span>
+                                    <a href="https://fisglobal.com" target="_blank" class="company-name"> FIS Global
+                                    </a>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-lg-4">
+                            <p class="job-role">Software Engineer Intern</p>
+                        </div>
+                    </div>
+
+                    <!-- Company description Row -->
+                    <div class="row card-body">
+                        <div class="col-12 text-left">
+                            <p class="pt-3 pb-2" style="border-top: 1px solid lightgray"> <em> A fortune 500
+                                    company, and an international provider of financial service technology, and
+                                    outsourcing services</em></p>
+
+                            <ul>
+                                <li> Developed multiple programs in COBOL, using in-house files to locate bank
+                                    accounts and calculate their future balance after interest, generate
+                                    interest reports showing a monthly interest breakdown, as well as generating
+                                    personalise notification letters for each inactive bank account on record</li>
+                                <li> Participate in weekly learning sessions, were each week a different executive
+                                    within the company was the guest speaker </li>
+                                <li> Collaborated in a group of 20 interns, primarily consisting of interns located
+                                    in Milwaukee, to complete a 7 week long project </li>
+                                <li> Attended multiple scrum meetings, to observe and learn from an agile
+                                    development team </li>
+                            </ul>
 
 
+                            <h5><strong>Accomplishments</strong></h5>
+                            <ul>
+                                <li> I was the only intern within my development group, to be able to complete all 4
+                                    of the COBOL programs assignt to us </li>
+                                <li> Out of a class of 17 total interns, i was voted as "The most inquisitive" by my
+                                    peers </li>
+                                <li> Self-taught myself COBOL, by completing an entire training course 1 week ahead
+                                    of schedule </li>
+                                <li> Received a score of 90% or above in all 7 COBOL assessment test, each one
+                                    consisting of 80 questions on average</li>
+                            </ul>
 
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 text-left card-footer">
+                            <p class="pl-3 mb-0 text-muted"> Jun 2019 - Aug 2019 | Orlando, Fl
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- valencia card -->
+            <div class="container mt-4 card">
+                <div class="text-center pt-3">
+                    <!-- Title Row -->
+                    <div class="row">
+                        <div class="col-md-3 col-lg-2">
+                            <a href="https://valenciacollege.edu/" target="_blank">
+                                <img class="img-fluid card-img  pl-3" style="width: 100% \9; height: 100%;"
+                                src="../images/experience/Valencia_Logo.svg"" alt="Card image cap">
+                            </a>
+                        </div>
+
+                        <div class="col-md-6 col-lg-6 ">
+                            <div class="company-name-format">
+                                <span>
+                                    <a href="https://valenciacollege.edu/" target="_blank" class="company-name"> Valencia
+                                        College </a>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-lg-4">
+                            <p class="job-role">Math Tutor</p>
+                        </div>
+                    </div>
+
+                    <!-- Company description Row -->
+                    <div class="row card-body">
+                        <div class="col-12 text-left">
+                            <p class="pt-3 pb-2" style="border-top: 1px solid lightgray"> <em> A public state college,
+                                    located in Orlando, Florida </em></p>
+
+                            <ul>
+                                <li> Provide supplemental math tutoring, in subjects such as Algebra, Calculus, and
+                                    Differential
+                                    Equations to students </li>
+                                <li> Host learning seminars, that focus on 1 specific math related topics at a time
+                                </li>
+                            </ul>
+
+                            <h5><strong>Accomplishments</strong></h5>
+                            <ul>
+                                <li> Promoted from <strong>Learning Assistant I</strong> to <strong>Learning Assistant
+                                        II</strong> </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 text-left card-footer">
+                            <p class="pl-3 mb-0 text-muted"> Jan 2017 - Present | Orlando, Fl
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </main>
 
@@ -134,5 +260,6 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     </div>
-    </body>
+</body>
+
 </html>
