fixed a few mobile first padding issues

--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,7 @@
         <!--- Navigation Bar  ------------------------>
         <header>
             <nav class="navbar navbar-expand-md navbar-dark nav-bg fixed-top">
+                <div class="container">
                 <a class="navbar-brand nav-font" href="#">Home</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -35,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <!-- left nav items -->
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#">Experience <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#experience">Experience <span class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#">Projects</a>
                         <a class="nav-item nav-link" href="#">Skills</a>
                         <a class="nav-item nav-link" href="#">Contact</a>
@@ -47,6 +48,7 @@
                         <a class="nav-item nav-link" href="#">Blog</a>
                         <a class="nav-item nav-link" href="#">Resume</a>
                     </div>
+                </div>
                 </div>
             </nav>
         </header>
@@ -62,12 +64,12 @@
             </div>
 
             <div class="container">
-                <div class="row text-center pt-4 pb-5">
+                <div class="row text-center pt-4 pb-sm-3 pb-lg-5">
 
                     <!-- profile img -->
                     <div class="col-md-5 p-0">
                         <img src="C:\Users\colle\Desktop\intern memories\intern memories\me.jpg"
-                            class="img-fluid profile-img p-0" alt="photo of Alex Nunez">
+                            class="img-fluid profile-img p-0 mb-3 mb-md-0" alt="photo of Alex Nunez">
                     </div>
 
                     <!-- intro paragraph -->
@@ -107,8 +109,8 @@
 
 
             <!-- Experience section -------->
-            <div class="container text-center pt-5">
-                <h1 class="section-headings mb-0"><strong>EXPERIENCE</strong></h1>
+            <div class="container text-center pt-1" id="experience">
+                <h1 class="section-headings mb-0 pt-5"><strong>EXPERIENCE</strong></h1>
             </div>
 
             <!-- FIS card -->
