fixed a few mobile padding

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#experience">Experience <span class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#">Projects</a>
-                        <a class="nav-item nav-link" href="#">Skills</a>
+                        <a class="nav-item nav-link" href="#" >Skills</a>
                         <a class="nav-item nav-link" href="#">Contact</a>
                     </div>
 
@@ -64,7 +64,7 @@
             </div>
 
             <div class="container">
-                <div class="row text-center pt-4 pb-sm-3 pb-lg-5">
+                <div class="row text-left pt-4 pb-sm-3 pb-lg-5">
 
                     <!-- profile img -->
                     <div class="col-md-5 p-0">
@@ -126,7 +126,7 @@
                         </div>
 
                         <div class="col-md-3 col-lg-6">
-                            <div class="company-name-format">
+                            <div class="company-name-format pt-5 pt-md-3">
                                 <span>
                                     <a href="https://fisglobal.com" target="_blank" class="company-name"> FIS Global
                                     </a>
@@ -135,7 +135,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-4">
-                            <p class="job-role">Software Engineer Intern</p>
+                            <p class="job-role pt-1 mt-md-3">Software Engineer Intern</p>
                         </div>
                     </div>
 
@@ -196,7 +196,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-6 ">
-                            <div class="company-name-format">
+                            <div class="company-name-format pt-5 pt-md-3">
                                 <span>
                                     <a href="https://valenciacollege.edu/" target="_blank" class="company-name"> Valencia
                                         College </a>
@@ -205,7 +205,7 @@
                         </div>
 
                         <div class="col-md-3 col-lg-4">
-                            <p class="job-role">Math Tutor</p>
+                            <p class="job-role pt-1 pt-md-4">Math Tutor</p>
                         </div>
                     </div>
 
