added project section in a mobile first approach

--- a/html/index.html
+++ b/html/index.html
@@ -26,29 +26,31 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark nav-bg fixed-top">
                 <div class="container">
-                <a class="navbar-brand nav-font" href="#">Home</a>
+                    <a class="navbar-brand nav-font" href="#">Home</a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <!-- left nav items -->
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#experience">Experience <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">Projects</a>
-                        <a class="nav-item nav-link" href="#" >Skills</a>
-                        <a class="nav-item nav-link" href="#">Contact</a>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <!-- left nav items -->
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link" href="#experience">Experience <span
+                                    class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link" href="#project">Projects</a>
+                            <a class="nav-item nav-link" href="#">Skills</a>
+                            <a class="nav-item nav-link" href="#">Contact</a>
+                        </div>
+
+                        <!-- right nav items -->
+                        <div class="navbar-nav ml-auto">
+                            <a class="nav-item nav-link " href="#">Bio <span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link" href="#">Blog</a>
+                            <a class="nav-item nav-link" href="#">Resume</a>
+                        </div>
                     </div>
-
-                    <!-- right nav items -->
-                    <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link " href="#">Bio <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">Blog</a>
-                        <a class="nav-item nav-link" href="#">Resume</a>
-                    </div>
-                </div>
                 </div>
             </nav>
         </header>
@@ -191,14 +193,15 @@
                         <div class="col-md-3 col-lg-2">
                             <a href="https://valenciacollege.edu/" target="_blank">
                                 <img class="img-fluid card-img  pl-3" style="width: 100% \9; height: 100%;"
-                                src="../images/experience/Valencia_Logo.svg"" alt="Card image cap">
+                                    src="../images/experience/Valencia_Logo.svg"" alt=" Card image cap">
                             </a>
                         </div>
 
                         <div class="col-md-6 col-lg-6 ">
                             <div class="company-name-format pt-5 pt-md-3">
                                 <span>
-                                    <a href="https://valenciacollege.edu/" target="_blank" class="company-name"> Valencia
+                                    <a href="https://valenciacollege.edu/" target="_blank" class="company-name">
+                                        Valencia
                                         College </a>
                                 </span>
                             </div>
@@ -233,6 +236,62 @@
                     <div class="row">
                         <div class="col-12 text-left card-footer">
                             <p class="pl-3 mb-0 text-muted"> Jan 2017 - Present | Orlando, Fl
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Project section -------->
+            <div class="container text-center pt-1" id="project">
+                <h1 class="section-headings mb-0 pt-5"><strong>PROJECTS</strong></h1>
+            </div>
+
+            <!-- container for project cards -->
+            <div class="container pt-4 pb-5">
+                <div class="row">
+
+                    <!-- Trie Project Card -->
+                    <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0" style="width: 18rem;">
+                        <div class="card text-center project-img-container">
+                            <div class="card-header">
+                                <h5 class="pt-2 mb-0"><strong> Trie Text Prediction</strong></h5>
+                            </div>
+                            <img class="img-fluid project-img" src="../images/projects/tries_prj.svg"
+                                alt="Card image cap">
+                        </div>
+                    </div>
+
+                    <!-- Weather Project Card -->
+                    <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0" style="width: 18rem;">
+                        <div class="card text-center project-img-container">
+                            <div class="card-header">
+                                <h5 class="pt-2 mb-0"><strong> Weather Applications </strong></h5>
+                            </div>
+                            <img class="img-fluid project-img" src="../images/projects/Weather_prj.svg"
+                                alt="Card image cap">
+                        </div>
+                    </div>
+
+                    <!-- Edge Detection Project Card -->
+                    <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0" style="width: 18rem;">
+                        <div class="card text-center project-img-container">
+                            <div class="card-header">
+                                <h5 class="pt-2 mb-0"><strong> Edge Dectection Applications </strong></h5>
+                            </div>
+                            <img class="img-fluid project-img" src="../images/projects/robot_vision_prj.svg"
+                                alt="Card image cap">
+                        </div>
+                    </div>
+
+                    <!-- Step Counter Project Card -->
+                    <div class="col-12 col-md-6 col-lg-3" style="width: 18rem;">
+                        <div class="card text-center project-img-container">
+                            <div class="card-header">
+                                <h5 class="pt-2 mb-0"><strong> Step Counter </strong></h5>
+                            </div>
+                            <img class="img-fluid project-img" src="../images/projects/watch_prj.svg"
+                                alt="Card image cap">
                         </div>
                     </div>
                 </div>
