--- a/html/index.html
+++ b/html/index.html
@@ -40,8 +40,8 @@
                             <a class="nav-item nav-link" href="#experience">Experience <span
                                     class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link" href="#project">Projects</a>
-                            <a class="nav-item nav-link" href="#">Skills</a>
-                            <a class="nav-item nav-link" href="#">Contact</a>
+                            <a class="nav-item nav-link" href="#skills">Skills</a>
+                            <a class="nav-item nav-link" href="#contact">Contact</a>
                         </div>
 
                         <!-- right nav items -->
@@ -60,9 +60,7 @@
 
             <!-- About section -------->
             <div class="container text-center pt-2">
-                <!-- <span> -->
                 <h1 class="section-headings"><strong>ABOUT</strong></h1>
-                <!-- </span> -->
             </div>
 
             <div class="container">
@@ -116,8 +114,8 @@
             </div>
 
             <!-- FIS card -->
-            <div class="container card mt-4 mb-5">
-                <div class="text-center pt-3">
+            <div class="container mt-4 mb-5">
+                <div class="text-center pt-3 card">
                     <!-- Title Row -->
                     <div class="row">
                         <div class="col-md-3 col-lg-2">
@@ -173,12 +171,14 @@
                                 <li> Received a score of 90% or above in all 7 COBOL assessment test, each one
                                     consisting of 80 questions on average</li>
                             </ul>
-
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-12 text-left card-footer">
-                            <p class="pl-3 mb-0 text-muted"> Jun 2019 - Aug 2019 | Orlando, Fl
+
+                    <div class="footer-wrapper ml-3 pl-3">
+                        <div class="row">
+                            <div class="col-12 text-left card-footer ml-3">
+                                <p class="pl-0 mb-0 text-muted"> Jun 2019 - Aug 2019 | Orlando, Fl
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -186,8 +186,8 @@
 
 
             <!-- valencia card -->
-            <div class="container mt-4 card">
-                <div class="text-center pt-3">
+            <div class="container mt-4">
+                <div class="text-center pt-3 card">
                     <!-- Title Row -->
                     <div class="row">
                         <div class="col-md-3 col-lg-2">
@@ -232,12 +232,17 @@
                                         II</strong> </li>
                             </ul>
                         </div>
+
                     </div>
-                    <div class="row">
-                        <div class="col-12 text-left card-footer">
-                            <p class="pl-3 mb-0 text-muted"> Jan 2017 - Present | Orlando, Fl
+
+                    <div class="footer-wrapper ml-3 pl-3">
+                        <div class="row">
+                            <div class="col-12 text-left card-footer ml-3">
+                                <p class="pl-0 mb-0 text-muted"> Jan 2017 - Present | Orlando, Fl
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
 
@@ -277,7 +282,7 @@
                     <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0" style="width: 18rem;">
                         <div class="card text-center project-img-container">
                             <div class="card-header">
-                                <h5 class="pt-2 mb-0"><strong> Edge Dectection Applications </strong></h5>
+                                <h5 class="pt-2 mb-0"><strong> Robot Vision </strong></h5>
                             </div>
                             <img class="img-fluid project-img" src="../images/projects/robot_vision_prj.svg"
                                 alt="Card image cap">
@@ -292,6 +297,194 @@
                             </div>
                             <img class="img-fluid project-img" src="../images/projects/watch_prj.svg"
                                 alt="Card image cap">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Skills section -------->
+            <div class="container text-center pt-1" id="skills">
+                <h1 class="section-headings mb-0 pt-5"><strong>SKILLS</strong></h1>
+            </div>
+
+            <!-- Languages Card -->
+            <div class="container mt-4">
+                <div class="text-left pt-3 card">
+                    <!-- Skill Name Row -->
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="skill-name pl-4"> Languages & Databases
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Logos Row -->
+                    <div class="row card-body">
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/c_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0" >C</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/java_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0" >Java</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/cobol_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0" >COBOL</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/mysql_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0" >MySql</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Web Technology card -->
+            <div class="container mt-4">
+                <div class=" card text-left pt-3">
+                    <!-- Skill Name Row -->
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="skill-name pl-4"> Web Technologies </p>
+                        </div>
+                    </div>
+
+                    <!-- Logos Row -->
+                    <div class="row card-body">
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/html5_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-2" >HTML</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/css_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >CSS</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/javascript_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >JavaScript</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img  pl-3" src="../images/skills/nodejs_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Node JS</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/react_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >React JS</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/expressjs_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Express JS</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/bootstrap_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Bootstrap</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <!-- Others Card -->
+            <div class="container mt-4">
+                <div class="card text-left pt-3">
+                    <!-- Others Name Row -->
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="skill-name pl-4">
+                                Other Technical Skills
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Logos Row -->
+                    <div class="row card-body">
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/data_structures_logo.svg" alt="Card image cap" >
+                            <p class="pl-3 pt-2" >Data Structures & Algorithms</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/git_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Git</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/github_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Github</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/heroku_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Heroku</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/android_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Android Development</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/npm_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Npm</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-3 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/math_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2" >Mathematics</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Soft Skills Card -->
+            <div class="container mt-4">
+                <div class="card text-left pt-3">
+                    <!-- Others Name Row -->
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="skill-name pl-4"> Soft skills </p>
+                        </div>
+                    </div>
+
+                    <!-- Logos Row -->
+                    <div class="row card-body">
+                        <div class="col-6 col-md-4 col-lg-2 text-center">
+                            <img class="img-fluid skill-img  pl-3" src="../images/skills/leadership_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">Leadership</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-2 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/thinking_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">Critical Thinking</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-2 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/dedication_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">Hard Work & Dedication</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-2 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/teamwork_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">Team Work</p>
+                        </div>
+
+                        <div class="col-6 col-md-4 col-lg-2 text-center">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/positive_logo.svg" alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">Confidence & Positive Attitude</p>
                         </div>
                     </div>
                 </div>
